"Add Subscriber" screen
no issue
- uses modal to display a new subscriber form
- validates subscriber e-mail address
- moves pagination from route into controller to use filtered/sorted CPs on top of a live-query so that new subscribers are added to the list and the total can be properly managed

TODO:
- there is currently a pretty serious performance issue where the whole table is re-rendered when the live-query is updated. `ember-light-table` doesn't allow for live-binding and has no options to easily manipulate it's rows using an external interface - it's possible to move the page loading into the component so we only render new rows but that leaves it difficult to react to new subscribers being added through the UI. I believe the number of components used within the table is also adding to the performance problems.
  - most likely solution is to drop `ember-light-table` in favour of rendering the table directly - glimmer should do a good job of fast updates even though the underlying array will be completely swapped out

--- a/core/client/app/templates/components/gh-subscribers-table.hbs
+++ b/core/client/app/templates/components/gh-subscribers-table.hbs
@@ -1,4 +1,4 @@
-{{#light-table table scrollContainer=".subscribers-table" scrollBuffer=50 onScrolledToBottom=(action 'onScrolledToBottom') as |t|}}
+{{#light-table table scrollContainer=".subscribers-table" scrollBuffer=100 onScrolledToBottom=(action 'onScrolledToBottom') as |t|}}
     {{t.head}}
 
     {{#t.body canSelect=false as |body|}}
@@ -6,12 +6,12 @@
             {{#body.loader}}
                 Loading...
             {{/body.loader}}
-        {{/if}}
-
-        {{#if table.isEmpty}}
-            {{#body.no-data}}
-                No subscribers found.
-            {{/body.no-data}}
+        {{else}}
+            {{#if table.isEmpty}}
+                {{#body.no-data}}
+                    No subscribers found.
+                {{/body.no-data}}
+            {{/if}}
         {{/if}}
     {{/t.body}}
 {{/light-table}}
