Put client-side Subscribers screens behind labs flag
no issue
- add subscribers flag to labs screen
- hide menu item unless subscribers feature is enabled
- redirect if subscribers screens are accessed via URL when feature is disabled

--- a/core/client/app/templates/settings/labs.hbs
+++ b/core/client/app/templates/settings/labs.hbs
@@ -50,6 +50,9 @@
                     {{#gh-feature-flag "publicAPI"}}
                         Public API - For full instructions, read the <a href="http://support.ghost.org/public-api-beta/">developer guide</a>.
                     {{/gh-feature-flag}}
+                    {{#gh-feature-flag "subscribers"}}
+                        Subscribers - Allow visitors to subscribe to e-mail updates of your new posts
+                    {{/gh-feature-flag}}
                 </div>
             </fieldset>
         </form>
