"Import subscribers" screen
no issue
- uses modal to display an import subscribers CSV file upload form
- displays upload progress
- displays import stats and reloads subscribers table once import has completed
- adds `gh-file-uploader` component (NB. pared down copy of `gh-image-uploader`, ripe for some refactoring)
- fixes subscribers acceptance test failing because fixtures did not have the labs flag enabled

Unfortunately this doesn't have 100% test coverage as we're limited in how we can simulate file uploads 😞

--- a/core/client/app/styles/components/modals.css
+++ b/core/client/app/styles/components/modals.css
@@ -61,10 +61,6 @@
 /* The modal
 /* ---------------------------------------------------------- */
 
-.fullscreen-modal .gh-image-uploader {
-    margin: 0;
-}
-
 
 /* Modal content
 /* ---------------------------------------------------------- */
@@ -141,6 +137,10 @@
 
 .modal-footer button:first-of-type {
     margin-left: 0;
+}
+
+.modal-body .gh-image-uploader {
+    margin: 0;
 }
 
 
