--- a/core/client/app/templates/subscribers/new.hbs
+++ b/core/client/app/templates/subscribers/new.hbs
@@ -1,1 +1,4 @@
-{{gh-fullscreen-modal "new-subscriber" model=model confirm=(route-action "save") close=(route-action "cancel")}}
+{{gh-fullscreen-modal "new-subscriber"
+    model=model
+    confirm=(route-action "save")
+    close=(route-action "cancel")}}
