Fix performance issues with subscribers table
no issue
- moves the table definition from the component up to the controller
- switches back to manually manipulating table rows instead of using a live-query

This is a quick-fix in that it allows us to continue using the `ember-light-table` component but it does mean that we lose some flexibility that the live-query gave us. For now it's not much of an issue and it allows us to defer deeper performance/flexibility work until we have a concrete need and requirements.

--- a/core/client/app/templates/subscribers.hbs
+++ b/core/client/app/templates/subscribers.hbs
@@ -8,7 +8,7 @@
 
     <section class="view-container">
         {{gh-subscribers-table
-                subscribers=sortedSubscribers
+                table=table
                 isLoading=isLoading
                 loadNextPage=(action 'loadNextPage')}}
 
