Subscriber form improvements
- add confirm, location & referrer hidden fields
- add script to populate location & referrer
- add helper for creating the email field
- pass through input class and placeholder for email from top level form helper
- rename subscribe_form template & helper as it sounds more natural

--- a/core/server/apps/subscribers/lib/views/subscribe.hbs
+++ b/core/server/apps/subscribers/lib/views/subscribe.hbs
@@ -26,10 +26,9 @@
                 <div class="gh-flow-content-wrap">
                     <section class="gh-flow-content">
                         <header>
-                            <h1>Subscribe</h1>
+                            <h1>Subscribe to {{@blog.title}}</h1>
                         </header>
-                        {{test}}
-                        {{form_subscribe class="gh-signin"}}
+                        {{subscribe_form form_class="gh-signin" input_class="gh-input" placeholder="Your email address"}}
                     </section>
                 </div>
             </div>
